[package]
name = "adrenaline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timer = "0.2.0"
tokio = { version = "1.34.0", features = ["full"] }
num_cpus = "1.16.0"
log = "0.4.20"
socket2 = "0.5.5"
env_logger = "0.10.1"
enum-map = "2.7.3"
chrono = "0.4.31"
tempdir = "0.3.7"
